--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
   <div class="slide-wrapper">
     <ul class="slide">
-      <li><img src="img/foto1.jpg" alt=""></li>
-      <li><img src="img/foto2.jpg" alt=""></li>
-      <li><img src="img/foto3.jpg" alt=""></li>
-      <li><img src="img/foto4.jpg" alt=""></li>
-      <li><img src="img/foto5.jpg" alt=""></li>
-      <li><img src="img/foto6.jpg" alt=""></li>
+      <li><img src="img/foto1.jpg" alt="img/foto1"></li>
+      <li><img src="img/foto2.jpg" alt="img/foto1"></li>
+      <li><img src="img/foto3.jpg" alt="img/foto1"></li>
+      <li><img src="img/foto4.jpg" alt="img/foto1"></li>
+      <li><img src="img/foto5.jpg" alt="img/foto1"></li>
+      <li><img src="img/foto6.jpg" alt="img/foto1"></li>
     </ul>
   </div>
   <div class="arrow-nav">
