--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+  <ul class="custom-controls">
+    <li><img src="img/foto1-thumb.jpg" alt=""></li>
+    <li><img src="img/foto2-thumb.jpg" alt=""></li>
+    <li><img src="img/foto3-thumb.jpg" alt=""></li>
+    <li><img src="img/foto4-thumb.jpg" alt=""></li>
+    <li><img src="img/foto5-thumb.jpg" alt=""></li>
+    <li><img src="img/foto6-thumb.jpg" alt=""></li>
+  </ul>
+
   <div class="slide-wrapper">
     <ul class="slide">
       <li><img src="img/foto1.jpg" alt="img/foto1"></li>
@@ -17,10 +26,10 @@
       <li><img src="img/foto5.jpg" alt="img/foto1"></li>
       <li><img src="img/foto6.jpg" alt="img/foto1"></li>
     </ul>
-  </div>
-  <div class="arrow-nav">
-    <button class="prev">Prev</button>
-    <button class="next">Next</button>
+    <div class="arrow-nav">
+      <button class="prev"></button>
+      <button class="next"></button>
+    </div>
   </div>
   <script type="module" src="js/scripts.js"></script>
 </body>
